
[workspace]
members = [
  "_1_两数之和",
  "_9_回文数",
  "_13_罗马数字转整数",
  "_20_有效的括号",
  "_3_无重复字符的最长子串",
  "_136_只出现一次的数字",
  "_66_加一",
  "_200_岛屿数量",
  "mytest",
  "记录/算法模式",
  "_283_移动零",
  "_344_反转字符串",
  "_441_排列硬币",
  "_1528_重新排列字符串",
  "_169_多数元素",
  "_58_最后一个单词的长度",
  "_42_接雨水",
  "_690_员工的重要性",
  "_557_反转字符串中的单词_III",
  "_104_二叉树的最大深度",
  "_21_合并两个有序链表",
  "_292_Nim_游戏",
  "_195_第十行",
  "_17_电话号码的字母组合",
  "_21_合并两个有序链表",
  "_94_二叉树的中序遍历",
  "_100_相同的树",
  "_26_删除有序数组中的重复项",
  "_70_爬楼梯",
  "_463_岛屿的周长",
  "_101_对称二叉树",
  "_67_二进制求和",
  "_69_x_的平方根",
  "_83_删除排序链表中的重复元素",
  "_88_合并两个有序数组",
  "_108_将有序数组转换为二叉搜索树",
  "_459_重复的子字符串",
  "_485_最大连续_1_的个数",
  "_448_找到所有数组中消失的数字",
  "_15_三数之和",
  "_56_合并区间",
  "_268_丢失的数字",
  "_977_有序数组的平方",
  "_561_数组拆分",
  "_566_重塑矩阵"
]

[package]
name = "weykon-leetcode-cn"
version = "0.1.0"    
authors = ["Weykon <weykon@qq.com>"]

[dependencies]
regex = "1"
toml = "0.7.2"
serde = { version = "1.0.152", features = ["derive"] }